--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang='en'>
+
 <head>
   <title>ACC Voting Districts</title>
   <meta charset='utf-8'>
@@ -11,23 +12,29 @@
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
 
 </head>
+
 <body>
   <div class='grid'>
-        <div class='col col--12 col--3-ml px12 viewport-third viewport-full-ml'>
-            <div class='h-full scroll-auto relative'>
-                <h1 class='txt-h2 mb6'>Athens-Clarke County Voting Districts</h1>
-                <p>Find your voting district for local and statewide elections. Enter you address into the box to the left </p><br>
-                <p>This map shows precincts, commission districts, school board districts, congressional districts, and .</p>
+    <div class='col col--12 col--3-ml px12 viewport-third viewport-full-ml'>
+      <div class='h-full scroll-auto relative'>
+        <h1 class='txt-h2 mb6'>Athens-Clarke County Voting Districts</h1>
+        <p>Find your voting district for local and statewide elections. Enter you address into the box to the left </p><br>
+        <p>This map shows precincts, commission districts, school board districts, congressional districts, and .</p>
 
-                <footer class='mt12 bg-gray-faint txt-s absolute w-full bottom px12'>
-                    <ul>
-                        <li>Explore the raw <a class='link' href='http://athensclarkecounty.com/248/Current-District-Maps'>data</a></li>
-                        <li>Map authored by <a class='link' href='#'>M. Duever</a></li>
-                        </p>
-                </footer>
-            </div>
-        </div>
-        <div class='col col--12 col--9-ml h180 h-full-ml'>
-<div id="map" class='viewport-twothirds viewport-full-ml'></div>
+        <footer class='mt12 bg-gray-faint txt-s absolute w-full bottom px12'>
+          <ul>
+            <li>Explore the raw <a class='link' href='http://athensclarkecounty.com/248/Current-District-Maps'>data</a></li>
+            <li>Map authored by <a class='link' href='#'>M. Duever</a></li>
+            </p>
+        </footer>
+      </div>
+    </div>
+    <div class='col col--12 col--9-ml h180 h-full-ml'>
+      <div id="map" class='viewport-twothirds viewport-full-ml'></div>
+
+      <script>
+        //javascript here
+      </script>
 </body>
+
 </html>
