--- a/index.html
+++ b/index.html
@@ -40,13 +40,16 @@
       // MAKE AN AWESOME WEB MAP!
       var map = L.map('map', {
         center: [33.938718, -83.371200],
-        zoom: 11,
+        zoom: 11.5,
     });
 
       var tiles = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/Canvas/World_Light_Gray_Base/MapServer/tile/{z}/{y}/{x}', {
           attribution: 'Tiles &copy; Esri &mdash; Esri, DeLorme, NAVTEQ',
-          maxZoom: 16
+          maxZoom: 16,
+          minZoom: 11
       }).addTo(map);
+
+    //load geojson
 
       </script>
 </body>
