--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class='col col--12 col--3-ml px12 viewport-third viewport-full-ml'>
       <div class='h-full scroll-auto relative'>
         <h1 class='txt-h2 mb6'>Athens-Clarke County Voting Districts</h1>
-        <p>Find your voting district for local and statewide elections. Enter your address by clicking on the magnifying glass on the left.</p><br>
+        <p>Find your voting district for local and statewide elections. Enter your address into the search box on the left.</p><br>
         <p>This map shows precincts, commission districts, school board districts, congressional districts, and the state house districts.</p>
 
         <footer class='mt12 bg-gray-faint txt-s absolute w-full bottom px12'>
@@ -65,7 +65,12 @@
           minZoom: 11
       }).addTo(map);
 // add geocoder
-      L.control.geocoder('mapzen-zeZY4Xt').addTo(map);
+      var options = {
+        bounds: true,
+        position: 'topleft',
+        expanded: true
+      };
+      L.control.geocoder('mapzen-zeZY4Xt', options).addTo(map);
 
 //asynchronous loading of the data, multiple layers
     $.when(
